--- a/mern-fitness/package.json
+++ b/mern-fitness/package.json
@@ -22,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "cd mern-fitness && npm install && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
