--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cd backend && npm install && node server.js",
     "heroku-postbuild": "cd mern-fitness && npm install && npm run build"
   },
   "keywords": [],
